--- a/my-site/templates/main/base.html
+++ b/my-site/templates/main/base.html
@@ -17,17 +17,17 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href={% static "main/images/favicon.ico" %} type="image/x-icon" >
-    <link rel="apple-touch-icon" href={% static "main/images/apple-touch-icon.png" %}>
+    <link rel="shortcut icon" href={% static "main/images/favicon.ico"%} type="image/x-icon">
+    <link rel="apple-touch-icon" href={% static "main/images/apple-touch-icon.png"%}>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href={% static "main/css/bootstrap.min.css" %}>
+    <link rel="stylesheet" href={% static "main/css/bootstrap.min.css"%}>
     <!-- Site CSS -->
-    <link rel="stylesheet" href={% static "main/css/style.css" %}>
+    <link rel="stylesheet" href={% static "main/css/style.css"%}>
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href={% static "main/css/responsive.css" %}>
+    <link rel="stylesheet" href={% static "main/css/responsive.css"%}>
     <!-- Custom CSS -->
-    <link rel="stylesheet" href={% static "main/css/custom.css" %}>
+    <link rel="stylesheet" href={% static "main/css/custom.css"%}>
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -113,7 +113,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                    <a class="navbar-brand" href="index.html"><img src={% static "main/images/logo.png" %} class="logo" alt=""></a>
+                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt=""></a>
                 </div>
                 <!-- End Header Navigation -->
 
@@ -154,17 +154,108 @@
                 </div>
                 <!-- End Atribute Navigation -->
             </div>
-                
-{% block content %}
+            <!-- Start Side Menu -->
+            <div class="side">
+                <a href="#" class="close-side"><i class="fa fa-times"></i></a>
+                <li class="cart-box">
+                    <ul class="cart-list">
+                        <li>
+                            <a href="#" class="photo"><img src={% static "main/images/img-pro-01.jpg" %} class="cart-thumb" alt="" /></a>
+                            <h6><a href="#">Delica omtantur </a></h6>
+                            <p>1x - <span class="price">$80.00</span></p>
+                        </li>
+                        <li>
+                            <a href="#" class="photo"><img src={% static "main/images/img-pro-02.jpg" %} class="cart-thumb" alt="" /></a>
+                            <h6><a href="#">Omnes ocurreret</a></h6>
+                            <p>1x - <span class="price">$60.00</span></p>
+                        </li>
+                        <li>
+                            <a href="#" class="photo"><img src={% static "main/images/img-pro-03.jpg" %} class="cart-thumb" alt="" /></a>
+                            <h6><a href="#">Agam facilisis</a></h6>
+                            <p>1x - <span class="price">$40.00</span></p>
+                        </li>
+                        <li class="total">
+                            <a href="#" class="btn btn-default hvr-hover btn-cart">VIEW CART</a>
+                            <span class="float-right"><strong>Total</strong>: $180.00</span>
+                        </li>
+                    </ul>
+                </li>
+            </div>
+            <!-- End Side Menu -->
+        </nav>
+        <!-- End Navigation -->
+    </header>
+    <!-- End Main Top -->
 
-{% endblock content %}
+    <!-- Start Top Search -->
+    <div class="top-search">
+        <div class="container">
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                <input type="text" class="form-control" placeholder="Search">
+                <span class="input-group-addon close-search"><i class="fa fa-times"></i></span>
+            </div>
+        </div>
+    </div>
+    <!-- End Top Search -->
 
-{% comment %} <!-- Start Instagram Feed  -->
+    <!-- Start Slider -->
+    <div id="slides-shop" class="cover-slides">
+        <ul class="slides-container">
+            <li class="text-center">
+                <img src={% static "main/images/banner-01.jpg" %} alt="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
+                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="text-center">
+                <img src={% static "main/images/banner-02.jpg" %} alt="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
+                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="text-center">
+                <img src={% static "main/images/banner-03.jpg" %} alt="">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
+                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div class="slides-navigation">
+            <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+            <a href="#" class="prev"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+        </div>
+    </div>
+
+    {% block content %}
+    
+    
+    {% endblock content %}
+
+    <!-- Start Instagram Feed  -->
     <div class="instagram-box">
         <div class="main-instagram owl-carousel owl-theme">
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-01.jpg" %}  alt="" />
+                    <img src= {% static 'main/images/instagram-img-01.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -172,7 +263,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-02.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-02.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -180,7 +271,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-03.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-03.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -188,7 +279,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-04.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-04.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -196,7 +287,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-05.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-05.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -204,7 +295,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-06.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-06.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -212,7 +303,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-07.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-07.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -220,7 +311,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-08.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-08.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -228,7 +319,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-09.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-09.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -236,7 +327,7 @@
             </div>
             <div class="item">
                 <div class="ins-inner-box">
-                    <img src={% static "main/images/instagram-img-05.jpg" %} alt="" />
+                    <img src= {% static 'main/images/instagram-img-05.jpg' %} alt="" />
                     <div class="hov-in">
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -244,11 +335,11 @@
             </div>
         </div>
     </div>
-    <!-- End Instagram Feed  -->  {% endcomment %}
+    <!-- End Instagram Feed  -->
 
 
     <!-- Start Footer  -->
-    {% comment %} <footer>
+    <footer>
         <div class="footer-main">
             <div class="container">
 				<div class="row">
@@ -342,21 +433,21 @@
     <a href="#" id="back-to-top" title="Back to top" style="display: none;">&uarr;</a>
 
     <!-- ALL JS FILES -->
-    <script src={% static "main/js/jquery-3.2.1.min.js" %}></script>
-    <script src={% static "main/js/popper.min.js" %}></script>
-    <script src={% static "main/js/bootstrap.min.js" %}></script>
+    <script src={% static 'main/js/jquery-3.2.1.min.js' %}></script>
+    <script src={% static 'main/js/popper.min.js' %}></script>
+    <script src={% static 'main/js/bootstrap.min.js' %}></script>
     <!-- ALL PLUGINS -->
-    <script src={% static "main/js/jquery.superslides.min.js" %}></script>
-    <script src={% static "main/js/bootstrap-select.js" %}></script>
-    <script src={% static "main/js/inewsticker.js" %}></script>
-    <script src={% static "main/js/bootsnav.js." %}></script>
-    <script src={% static "main/js/images-loded.min.js" %}></script>
-    <script src={% static "main/js/isotope.min.js" %}></script>
-    <script src={% static "main/js/owl.carousel.min.js" %}></script>
-    <script src={% static "main/js/baguetteBox.min.js" %}></script>
-    <script src={% static "main/js/form-validator.min.js" %}></script>
-    <script src={% static "main/js/contact-form-script.js" %}></script>
-    <script src={% static "main/js/custom.js" %}></script>
+    <script src={% static 'main/js/jquery.superslides.min.js' %}></script>
+    <script src={% static 'main/js/bootstrap-select.js' %}></script>
+    <script src={% static 'main/js/inewsticker.js' %}></script>
+    <script src={% static 'main/js/bootsnav.js.' %}></script>
+    <script src={% static 'main/js/images-loded.min.js' %}></script>
+    <script src={% static 'main/js/isotope.min.js' %}></script>
+    <script src={% static 'main/js/owl.carousel.min.js' %}></script>
+    <script src={% static 'main/js/baguetteBox.min.js' %}></script>
+    <script src={% static 'main/js/form-validator.min.js' %}></script>
+    <script src={% static 'main/js/contact-form-script.js' %}></script>
+    <script src={% static 'main/js/custom.js' %}></script>
 </body>
 
-</html> {% endcomment %}
+</html>
