--- a/my-site/templates/main/index.html
+++ b/my-site/templates/main/index.html
@@ -6,42 +6,23 @@
         <!-- Start Slider -->
     <div id="slides-shop" class="cover-slides">
         <ul class="slides-container">
+            
+            {% for slide in sliders %}
             <li class="text-center">
-                <img src={% static "main/images/banner-01.jpg" %} alt="">
+                <img src={{slide.image.url}} alt="">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
+                            <h1 class="m-b-20"><strong>{{slide.header}}</strong></h1>
+                            <p class="m-b-40">{{slide.description}}</p>
+                            {% if slide.product_id %}
                             <p><a class="btn hvr-hover" href="#">Shop New</a></p>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
             </li>
-            <li class="text-center">
-                <img src={% static "main/images/banner-02.jpg" %} alt="">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="text-center">
-                <img src={% static "main/images/banner-03.jpg" %} alt="">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>Welcome To <br> Freshshop</strong></h1>
-                            <p class="m-b-40">See how your users experience your website in realtime or view <br> trends to see any changes in performance over time.</p>
-                            <p><a class="btn hvr-hover" href="#">Shop New</a></p>
-                        </div>
-                    </div>
-                </div>
-            </li>
+            {% endfor %} 
         </ul>
         <div class="slides-navigation">
             <a href="#" class="next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
